[gd_scene load_steps=7 format=3 uid="uid://dgq3u2ynb61q4"]

[ext_resource type="Script" path="res://arena.gd" id="1_0errd"]
[ext_resource type="PackedScene" uid="uid://0c8id4nsm8hd" path="res://player.tscn" id="2_axdbm"]
[ext_resource type="PackedScene" uid="uid://bhbwfyptv7w62" path="res://enemy.tscn" id="3_fcbq1"]
[ext_resource type="PackedScene" uid="uid://cbbxovsfn4jk2" path="res://player_2.tscn" id="4_1syic"]
[ext_resource type="Script" path="res://World_enemy_spawn_timer.gd" id="5_f5as0"]

[sub_resource type="Environment" id="Environment_xgrsk"]
background_mode = 3
glow_enabled = true
glow_bloom = 0.15
glow_blend_mode = 0

[node name="Arena" type="Node2D"]
script = ExtResource("1_0errd")

[node name="Player" parent="." instance=ExtResource("2_axdbm")]
position = Vector2(320, 180)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_xgrsk")

[node name="Enemy" parent="." instance=ExtResource("3_fcbq1")]

[node name="Enemy_spawn_timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Item_gun_timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Player2" parent="." instance=ExtResource("4_1syic")]
position = Vector2(300, 200)

[node name="World_enemy_spawn_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
script = ExtResource("5_f5as0")

[node name="World_day_timer" type="Timer" parent="."]
autostart = true

[node name="Daytimer" type="Label" parent="World_day_timer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 26.0
grow_horizontal = 2
text = "1"
horizontal_alignment = 1

[connection signal="timeout" from="Enemy_spawn_timer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="Item_gun_timer" to="." method="_on_item_gun_timer_timeout"]
[connection signal="timeout" from="World_enemy_spawn_timer" to="." method="_on_world_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="World_day_timer" to="." method="_on_world_day_timer_timeout"]
